# xending

./: .gitignore  Comparativo SOFOM ENR.xlsx  Flujo Operativo de Otorgamiento de Crédito.xlsx  SCORIG OTORGAMIENTO ESPECIF PROYECT 0825_Entregable.xlsx  openapi.yaml  package-lock.json  test-output.html
backend/: .env.example  Dockerfile  MIGRATION_GUIDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py
backend/app/models/: __init__.py  applications.py  companies.py  compliance.py  expedientes.py  financial.py  network.py  payment_accounts.py  profiles.py  sat.py  transactions.py
backend/app/routers/: applications.py  auth.py  companies.py  payment_accounts.py  scoring.py  transactions.py
backend/app/routers/proxy/: __init__.py  scory.py  syntage.py
backend/app/schemas/: auth.py  companies.py  payment_accounts.py  transactions.py
backend/app/services/: scory_client.py  syntage_client.py
backend/app/tasks/: __init__.py  scoring.py  syntage_polling.py
backend/tests/: conftest.py  test_health.py
brand/: BRAND_GUIDE.md
credit-scoring/: .env.example  .gitignore  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
docs/: CREDIT_SCORING_SYSTEM_OVERVIEW.md  DATA_MODEL.md  MAPA_DATOS_Y_MOTORES.md  PLATFORM_ARCHITECTURE.md  SCORING_METHODOLOGY_EXCEL_REFERENCE.md  SYNTAGE_API_INTEGRATION_MAP.md  UX_REFERENCE_MOCKUP.md
fx-pdf-generator/: .dockerignore  .env.example  (+24 more)
(+418 files in other folders)
